major edit, plus nyan

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: home
 <section id="about">
 	<div class="container">
 	  <div class="avatar">
-		<img class="img-circle" src="{{ site.baseurl }}static/img/{{ site.avatar }}" alt="Responsive image">
+		<img class="img-circle" id="displayPic" src="{{ site.baseurl }}static/img/{{ site.avatar }}" alt="Responsive image">
 	  </div>
 	  <h3>I'm <strong>{{ site.author }}</strong>, a Software Engineer.</h3>
 	  <!-- <h3>I love all things computer science and maths.</h3> -->
@@ -15,3 +15,19 @@ layout: home
 	  {% include social.html %}
 	</div>
 </section>
+
+
+<script>
+
+	var displayPicClickCount = 0;
+	$( document ).ready(function() {
+	    $("#displayPic").click(function(){
+			displayPicClickCount++;
+			if(displayPicClickCount == 5){
+				displayPicClickCount = 0;
+				alert("Easter Egg");
+			}
+		});
+	});
+	
+</script>
