--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@ layout: home
 	Your browser does not support the audio element.
 </audio>
 
-<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}static/css/easter.css" />
-<script src="{{ site.baseurl }}static/js/particles.min.js"></script>
+<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}static/css/easter.css" async/>
+<script src="{{ site.baseurl }}static/js/particles.min.js" async></script>
 
 <script type="text/javascript">
   function startParticles(){
