--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@ layout: home
 
 <script>
 window.onload = function(){
+    console.log("Lazyload run");
     $("#lazyload").append('<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}static/css/easter.css"/>');
     $("#lazyload").append('<script src="{{ site.baseurl }}static/js/particles.min.js" />');
     $("#lazyload").append('<script src="{{ site.baseurl }}static/js/easter.js" />');
