--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@ layout: home
 <!-- Load easter only after page load done -->
 
 <script>
-window.onload = function(){
+document.addEventListener("DOMContentLloaded", function(event){
     console.log("Lazyload run");
     $("#lazyload").append('<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}static/css/easter.css"/>');
     $("#lazyload").append('<script src="{{ site.baseurl }}static/js/particles.min.js" />');
     $("#lazyload").append('<script src="{{ site.baseurl }}static/js/easter.js" />');
     console.log("Lazyload done.")
-}
+});
 </script>
